# stuff

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 01_baseline.ipynb
scripts/: run_baseline.py
src/: data.py  eval.py  imagenet_mapping.py  models.py  utils.py
